fix: honor dark mode

--- a/bloembraaden/_front/admin.css
+++ b/bloembraaden/_front/admin.css
@@ -642,6 +642,7 @@ body .PEATCMS_admin h6,
 body .PEATCMS_admin em,
 body .PEATCMS_admin strong,
 body .PEATCMS_admin header,
+body .PEATCMS_admin section,
 body .PEATCMS_admin div,
 body .PEATCMS_admin span,
 body .PEATCMS_admin p {
